fix: resolve SonarQube code smells and bugs