@@ -1,4 +1,6 @@
 package com.example.live_classes_service.service.impl;
+
+import com.example.live_classes_service.exception.S3UploadException;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import software.amazon.awssdk.core.sync.RequestBody;
@@ -6,7 +8,8 @@ import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+
 @Service
 public class S3Service {
 
@@ -23,8 +26,7 @@ public class S3Service {
 
         try {
 
-            URL url = new URL(recordingUrl);
-            InputStream inputStream = url.openStream();
+            InputStream inputStream = URI.create(recordingUrl).toURL().openStream();
 
             String key = "recordings/" + sessionId + ".mp4";
 
@@ -42,7 +44,7 @@ public class S3Service {
             return "https://" + bucketName + ".s3.amazonaws.com/" + key;
 
         } catch (Exception e) {
-            throw new RuntimeException("Failed to upload recording to S3", e);
+            throw new S3UploadException("Failed to upload recording to S3", e);
         }
     }
 }
